# merchandise-inventory-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  inventory.db  inventory.json
src/: main.rs
static/: style.css
templates/: admin.html  base.html  home.html  inventory-edit.html  inventory.html  login.html  sale-tool.html  sales.html
