[package]
name = "merchandise-inventory-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.3", features = ["fs"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde"] }
